--- a/src/app/demo/components/auth/login/login.component.html
+++ b/src/app/demo/components/auth/login/login.component.html
@@ -38,11 +38,10 @@
                         </div>
                         <a class="font-medium no-underline ml-2 text-right cursor-pointer" style="color: var(--primary-color)">Forgot password?</a>
                     </div>
-                    <button pButton pRipple label="Sign In" class="w-full p-3 text-xl" style="margin: 10px;" (click)="login()" [routerLink]="['/']"></button>
+                    <button pButton pRipple label="Sign In" class="w-full p-3 text-xl" style="margin: 10px;" (click)="login()"></button>
                     <button pButton pRipple label="Sign Up" class="w-full p-3 text-xl" style="margin: 10px; background-color: blueviolet;"  routerLink="/auth/SignUp" ></button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div></div>
